--- a/firstapp/kv/welcome.kv
+++ b/firstapp/kv/welcome.kv
@@ -1,5 +1,12 @@
 <Welcome>:
     MDFloatLayout:
         md_bg_color: [1,1,1,1]
-        MDLabel:
-            text: "Welcome Screen"
+    Image:
+        source: "assets/images/back.jpeg"
+        size_hint: .9, .9
+        pos_hint: {'center_x': 0.5,'center_y': 0.73}
+    MDLabel:
+        text: "H e l l o !"
+        halign: "center"
+        font_name: "BPoppins"
+        font_size: "25sp"
